# loby

./: .dir-locals.el  .gitignore  README.md  development.ini  pyproject.toml  pytest.ini  tailwind.config.js  testing.ini
loby/: __init__.py  livereload.py  pshell.py  schema.py  schemas.py  views.py
loby/alembic/: env.py
loby/alembic/versions/: 20240506_2c839b3676f1_user_admin_seed_data.py  20240506_66731a07d576_user_table.py  20240506_ecbdeb53358b_permission_related_tables.py  20240511_4c8471c51c70_add_verified_column_to_user_table.py  20240519_a7f4c3398956_allow_bool_on_permission.py
loby/models/: __init__.py  user.py
loby/static/: style.css
loby/templates/: base.html  edit_user.html  home.html  login.html  register.html  user_form.html
loby/templates/admin/: index.html
loby/templates/admin/permissions/: edit.html  form.html  index.html
loby/templates/admin/resources/: edit.html  form.html  index.html
loby/templates/admin/roles/: edit.html  form.html  index.html
loby/templates/admin/users/: form.html  index.html
seeds/: admin_user_admin_role.py  tweak_admin_permissions.py
tests/: conftest.py  test_actions.py  test_schema.py
