[tool.poetry]
name = "loby"
version = "0.1.0"
description = "experiment in crud"
authors = ["Tom Willis <tom.willis@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pyramid = "^2.0.2"
sqlalchemy = "^2.0.30"
alembic = "^1.13.1"
pyramid-jinja2 = "^2.10.1"
psycopg2 = "^2.9.9"
pyramid-sqlalchemy = "^1.6"
pyramid-tm = "^2.5"
bcrypt = "^4.1.3"
colander = "^2.0"


[tool.poetry.group.test.dependencies]
pytest = "^8.2.0"
webtest = "^3.0.0"
pytest-cov = "^5.0.0"


[tool.poetry.group.dev.dependencies]
ipython = "^8.24.0"
python-lsp-server = {extras = ["all"], version = "^1.11.0"}
flake8 = "^7.0.0"
pyflakes = "^3.2.0"
black = ">=23.0,<24.0"
python-lsp-black = "^2.0.0"
pylsp-rope = "^0.1.16"
pyls-memestra = "^0.0.16"
mypy = "^1.10.0"
pyramid-debugtoolbar = "^4.12.1"

[tool.poetry.plugins."paste.app_factory"]
main = "loby:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
